@@ -1,6 +1,7 @@
 package com.app.soft2projbackend.handlers;
 
 import com.app.soft2projbackend.model.*;
+import com.app.soft2projbackend.nodetypes.ConditionalNode;
 import com.app.soft2projbackend.steprun.StepRun;
 import org.springframework.stereotype.Service;
 
@@ -13,14 +14,13 @@ public class Engine {
 
         ExecutionContext context = new ExecutionContext();
         Node current = flow.getStartNode();
-        StepRun stepRun = new StepRun(current.getId());
 
         while (current != null) {
             try {
                 current.execute(context);
                 current = getNextNode(flow, current, context);
             } catch (Exception e) {
-                if (current.getErrorPolicy() == PoliticaError.STOP) {
+                if (current.getErrorPolicy() == PoliticaError.STOP_ON_FAIL) {
                     throw new RuntimeException(e);
                 }
                 current = getNextNode(flow, current, context);
@@ -31,17 +31,17 @@ public class Engine {
 
     private Node getNextNode(Flow flow, Node current, ExecutionContext context) {
 
-        List<Connection> outs = flow.getConnectionsFrom(current.getId());
+        List<Connection> outs = flow.getConnectionsFrom(current.getId()); // List of Node connections
 
         if (current.getType() == TipoNodo.CONDITIONAL) {
-            Boolean result = (Boolean) context.get("conditionResult");
+            Boolean way = ((ConditionalNode) current).isCondition();
             return outs.stream()
-                    .filter(c -> c.matches(result))
+                    .filter(c -> c.isCondition(way))
                     .findFirst()
-                    .map(c -> flow.getNodeById(c.getToNodeId()))
+                    .map(c -> c.getToNode())
                     .orElse(null);
         }
 
-        return outs.isEmpty() ? null : flow.getNodeById(outs.get(0).getToNodeId());
+        return outs.isEmpty() ? null : outs.getFirst().getToNode();
     }
 }
